feat: add reusable checklists
